# python_08

./: README.md  etl.py  pipeline.py  pyproject.toml  sales.parquet
