[tool.poetry]
name = "python-08"
version = "0.1.0"
description = "Funções em Python e Estrutura de Dados - Parte 2"
authors = ["Rafael Alvarenga <devrafaelalvarenga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
